--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/ikuo-suyama/googlehome-rmmini3/issues"
   },
-  "homepage": "https://github.com/ikuo-suyama/googlehome-rmmini3#readme"
+  "homepage": "https://github.com/ikuo-suyama/googlehome-rmmini3#readme",
+  "dependencies": {
+    "firebase": "^4.8.1"
+  }
 }
