--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/ikuo-suyama/googlehome-rmmini3#readme",
   "dependencies": {
-    "firebase": "^4.8.1"
+    "config": "^1.28.1",
+    "firebase": "^4.8.1",
+    "js-yaml": "^3.10.0"
   }
 }
